[package]
name = "handshake-rpc"
version = "0.1.0"
authors = ["Handshake Alliance Team"]
edition = "2018"

[dependencies]

# Known External
extended-primitives = { git="https://github.com/UrkelLabs/extended-primitives", features=["serialization"]}
rpc-json-client = { git= "https://github.com/UrkelLabs/rpc"}

# Unknown External
serde = "1"
serde_derive = "1"
serde_json = "1"
futures-preview = "=0.3.0-alpha.18"

[dev-dependencies]
runtime = "0.3.0-alpha.7"






