[package]
name = "handshake-rpc"
version = "0.1.0"
authors = ["Urkel Labs <engineering@urkel.io>"]
edition = "2018"

[dependencies]

# Local
handshake-client-types = { path="../types" }

# Known External
extended-primitives = { git="https://github.com/UrkelLabs/extended-primitives", features=["serialization"]}
rpc-json-client = { git= "https://github.com/UrkelLabs/rpc"}
handshake-primitives = { git="https://github.com/UrkelLabs/rsd"}

# Unknown External
serde = "1"
serde_derive = "1"
serde_json = "1"
futures = "0.3.1"

[dev-dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }






