[package]
name = "handshake-client-types"
version = "0.1.0"
authors = ["Urkel Labs <engineering@urkel.io>"]
edition = "2018"

[dependencies]

# Known External
extended-primitives = { git="https://github.com/UrkelLabs/extended-primitives", features=["serialization"]}
handshake-primitives = { git="https://github.com/UrkelLabs/rsd", features=["json"]}
handshake-types = { git="https://github.com/UrkelLabs/rsd", features=["json"]}

# Unknown External
serde = "1"
serde_derive = "1"
serde_json = "1"
